--- a/app/views/cubes/index.html.erb
+++ b/app/views/cubes/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Card</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
     <% @cubes.each do |cube| %>
       <tr>
         <td><%= cube.name %></td>
+        <td><%= cube.card_id %></td>
         <td><%= link_to 'Show', cube %></td>
         <td><%= link_to 'Edit', edit_cube_path(cube) %></td>
         <td><%= link_to 'Destroy', cube, method: :delete, data: { confirm: 'Are you sure?' } %></td>
