--- a/app/views/cubes/show.html.erb
+++ b/app/views/cubes/show.html.erb
@@ -5,5 +5,10 @@
   <%= @cube.name %>
 </p>
 
+<p>
+  <strong>Card:</strong>
+  <%= @cube.card_id %>
+</p>
+
 <%= link_to 'Edit', edit_cube_path(@cube) %> |
 <%= link_to 'Back', cubes_path %>
